Started working on seq diag. Modified tex report

--- a/report/Rapport.tex
+++ b/report/Rapport.tex
@@ -48,10 +48,12 @@ Par Constant Théo et Essafsyfy Abdelkrim\\
 \setcounter{page}{1} %1st page is after table of contents
 
 \section{Maquette de l'interface graphique}
+\subsection{\textit{Launcher}}
+\subsection{Application}
 \section{Diagrammes UML}
 \subsection{Diagramme de cas d'utilisation}
 \subsection{Diagramme de classes}
-\subsection{Diagramme d'état}
+\subsection{Diagramme d'état \textit{(Yakindu)}}
 \subsection{Diagramme de séquence}
 \subsection{Diagramme d'activité}
 \subsection{Diagramme bonus?}
