unit tests + misc fixes + bottom messages in GUI

--- a/implementation/report/Rapport.tex
+++ b/implementation/report/Rapport.tex
@@ -97,11 +97,10 @@ There have been some changes to the model since its conception in the \textbf{Mo
 \section{Known Issues}
 %\pagebreak
 \section{Miscellaneous}
-\begin{itemize}
-  \item Video link: %\url{https://youtube.com}
-  \item Git repository: \url{https://github.com/Virtuosek/CassetteDeck}
-\end{itemize}
-Note that the repository is private, please send a contribution request to either $\href{mailto:remagkes@gmail.com}{remagkes@gmail.com} $ or $\href{mailto:_}{theoEmail}$
+\subsection{\textit{Git}}
+Throughout the project, we have used version control \textit{git} and \textit{github} to organize and avoid conflicts while working on the project. After receiving feedback from the modeling report, we have decided to make the repository private. We invite you to send a contribution request to either $\href{mailto:remagkes@gmail.com}{remagkes@gmail.com} $ or $\href{mailto:to.constant@gmail.com}{to.constant@gmail.com}$
+\subsection{Video link}
+As asked in the requisites, a video demonstrating the basic features of the simulation can be accessed via this link: 
 
 
 
